# aid

./: .gitattributes  .gitignore  CMakeLists.txt
include/aid/: BitVector.hpp  Config.hpp  Config.hpp.in  DynamicEndianConverter.hpp  Endian.hpp  Factory.hpp  Memory.hpp  NonCopyable.hpp  NonMovable.hpp  Singleton.hpp  TypeList.hpp
src/: DynamicEndianConverter.cpp  Endian.cpp
test/: test_BitVector.cpp  test_Endian.cpp  test_Factory.cpp  test_Singleton.cpp
